# Brainvisa-Diffuse

./: CMakeLists.txt  README.rst  info.py  setup.sh  test.py
brainvisa/toolboxes/diffuse/: diffuse.minf  diffuse.py
brainvisa/toolboxes/diffuse/hierarchies/brainvisa-3.2.0/: diffuse.py
brainvisa/toolboxes/diffuse/hierarchies/shared/: diffuse.py
brainvisa/toolboxes/diffuse/processes/: CSDReconstructionPipeline.procdoc  CSDReconstructionPipeline.py  DTIReconstructionPipeline.procdoc  DTIReconstructionPipeline.py  PreprocessingPipeline.procdoc  PreprocessingPipeline.py  TractographyPipeline.procdoc  TractographyPipeline.py  __init__.py  category_documentation.minf
brainvisa/toolboxes/diffuse/processes/0_import/: CorrectGradientOrientation.procdoc  CorrectGradientOrientation.py  Import.py  ImportDicom.py
brainvisa/toolboxes/diffuse/processes/1_denoising/: DenoisingPipeline.procdoc  LPCA.procdoc  LPCA.py  NLMS.procdoc  Piesno.procdoc
brainvisa/toolboxes/diffuse/processes/2_distortion correction/: BlipReversedCorrection.procdoc  EddyCurrentCorrectionECCAR.procdoc  EddyCurrentCorrectionEDDY.procdoc  (+2 more)
brainvisa/toolboxes/diffuse/types/: diffuse.py
doc/: installation.rst
python/brainvisa/diffuse/: BrainExtraction.py  BvecTransformation.py  DicomToNifti.py  building_spheres.py  ecclog2mat.sh  fibertool.py  meshes.py  rotbvecs  streamlines.py  tools.py  variables.py  visualization.py
python/brainvisa/diffuse/fibertool/: fibertool_computeHardi.m  fibertool_globalTracking.m  fibertool_importData.m  loadmask.m  preprocessODF.m  startstop_Callback.m  suggest_Callback.m
(+126 files in other folders)
